adding search logic with debouncing

--- a/index.html
+++ b/index.html
@@ -93,7 +93,19 @@
             </div>
             <div class="search-input-section container">
                 <div class="search-input">
+                    <i class="search-back-btn las la-arrow-left"></i>
                     <input type="text" placeholder="Search for a product">
+                </div>
+                <div class="results">
+                    <div class="search-result">
+                        <div class="search-result-item">
+                            <img src="https://cdn.clopos.com/cafephile/e0396444-5b9d-48e6-a463-904768f7ce9d/original_large.jpg" alt="">
+                            <div class="search-result-item-info">
+                                <h5 class="fw-bold">Coffee type</h5>
+                                <p class="text-muted">1.50 ₼</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="popup-image">
