--- a/index.html
+++ b/index.html
@@ -146,7 +146,25 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-cards container p-0 my-5"></div>
+            <div class="menu-cards container p-0 my-5">
+                <div id="${product.categoryId}" class="card-item col-md-6 mb-4">
+                    <div class="card-content d-flex align-items-center">
+                        <div class="ms-3">
+                            <h5 class="product-name mb-0">name</h5>
+                            <div class="coffee-size d-flex">
+                                <img src="./assets/images/S.svg" alt="">
+                                <img src="./assets/images/M.svg" alt="">
+                                <img src="./assets/images/L.svg" alt="">
+                            </div>
+                            <div class="product-price d-flex">
+                                <p class="mb-0 text-muted">7.00 ₼</p>
+                                <p class="mb-0 text-muted"><del>10 ₼</del></p>
+                            </div>
+                        </div>
+                        <img src="${product.image}" class="img img-fluid rounded" style="width: 100px; height: 80px;" alt="Espresso double">
+                    </div>
+                </div>
+            </div>
         </main>
     </div>
 
