added cup sizes to popup

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <img class="product-image" src="https://cdn.clopos.com/cafephile/e0396444-5b9d-48e6-a463-904768f7ce9d/original_large.jpg" alt="">
                         <i class="image-zoom las la-expand-arrows-alt"></i>
                     </div>
-                    <div>
+                    <!-- <div>
                         <h5 class="fw-bold">Coffee type</h5>
                         <form>
                             <div class="form-check">
@@ -121,41 +121,31 @@
                                     <span class="text-muted">1.50 ₼</span>
                                 </label>
                             </div>
-                            <!-- <div class="form-check">
-                                <input class="form-check-input" type="radio" name="coffeeType" id="decaf">
-                                <label class="form-check-label d-flex justify-content-between" for="decaf">
-                                    Decaf
-                                    <span class="text-muted">1.50 ₼</span>
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="coffeeType" id="mediumBrazil">
-                                <label class="form-check-label d-flex justify-content-between" for="mediumBrazil">
-                                    Medium Brazil
-                                    <span class="text-muted">0.70 ₼</span>
-                                </label>
-                            </div>
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="coffeeType" id="mediumEthiopia">
-                                <label class="form-check-label d-flex justify-content-between" for="mediumEthiopia">
-                                    Medium Ethiopia Lek.
-                                    <span class="text-muted">0.70 ₼</span>
-                                </label>
-                            </div> -->
                         </form>
-                    </div>
-                    <div class="size-place">
-                        <h5 class="fw-bold">Size</h5>
-                        <div class="size-card d-flex justify-content-between align-items-center">
+                    </div> -->
+                    <div class="type-place">
+                        <h5 class="fw-bold">Coffee type</h5>
+                        <div class="type-card d-flex justify-content-between align-items-center">
                             <div class="cup-description d-flex justify-content-start align-items-center">
-                                <img src="./assets/images/S.svg" width="30px" height="30px" alt="">
-                                <b>S</b>
-                                <span>230ml</span>
+                                <img src="./assets/images/done.svg" width="30px" height="30px" alt="">
+                                <span>Dark Brazil</span>
                             </div>
                             <div class="price-of-cup d-flex justify-content-start align-items-center">
                                 <span>1.50 ₼</span>
                             </div>
                         </div>
+                        <div class="type-card d-flex justify-content-between align-items-center">
+                            <div class="cup-description d-flex justify-content-start align-items-center">
+                                <img src="./assets/images/done.svg" width="30px" height="30px" alt="">
+                                <span>Dark Brazil</span>
+                            </div>
+                            <div class="price-of-cup d-flex justify-content-start align-items-center">
+                                <span>1.50 ₼</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="size-place">
+                        <h5 class="fw-bold">Size</h5>
                     </div>
                 </div>
             </div>
