added active class with scrolling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   </div>
                 </div>
             </div>
-            <div class="search-input-section container">
+            <div class="search-input-section">
                 <div class="search-input">
                     <i class="search-back-btn las la-arrow-left"></i>
                     <input type="text" placeholder="Search for a product">
