added filtering logic

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                     Seçin
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="allergyDropdown">
-                                    <li><label class="dropdown-item" for="allergy1"><input type="checkbox" id="allergy1" name="allergy1" value="Peanuts">Peanuts</label></li>
+                                    <li><label class="dropdown-item" for="allergy1"><input type="checkbox" id="allergy1" name="allergy1" checked value="Peanuts">Peanuts</label></li>
                                     <li><label class="dropdown-item" for="allergy2"><input type="checkbox" id="allergy2" name="allergy2" value="Sugar">Sugar</label></li>
                                     <li><label class="dropdown-item" for="allergy3"><input type="checkbox" id="allergy3" name="allergy3" value="Egg">Egg</label></li>
                                     <li><label class="dropdown-item" for="allergy4"><input type="checkbox" id="allergy4" name="allergy4" value="Coconut">Coconut</label></li>
@@ -107,8 +107,7 @@
 
             <div class="see-more-back">
                 <div class="see-more-popup container">
-                    <div class="see-more-image">
-                        <img class="product-image" src="https://cdn.clopos.com/cafephile/e0396444-5b9d-48e6-a463-904768f7ce9d/original_large.jpg" alt="">
+                    <div class="see-more-image product-image">
                         <i class="image-zoom las la-expand-arrows-alt"></i>
                     </div>
                     <div class="type-place">
