fixed button filtering

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <button class="btn btn-outline-secondary filter-btn px-2" data-filter="Kosher">Kosher</button>
                             <button class="btn btn-outline-secondary filter-btn px-2" data-filter="Vegetarian">Vegetarian</button>
                             <button class="btn btn-outline-secondary filter-btn px-2" data-filter="Vegan">Vegan</button>
-                            <button class="btn btn-outline-secondary filter-btn px-2" data-filter="GlutenFree">Gluten Free</button>
+                            <button class="btn btn-outline-secondary filter-btn px-2" data-filter="Gluten">Gluten Free</button>
                             <button class="btn btn-outline-secondary filter-btn px-2" data-filter="Hot">Hot</button>
                         </div>
                         <div class="form-group mb-4">
