--- a/index.html
+++ b/index.html
@@ -13,27 +13,26 @@
     <div class="container">
         <header>
             <div id="navbar" class="navbar d-flex align-items-center justify-content-between">
-                <div class="container">
-                    <div class="dark-light">
-                        <svg class="light" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
-                            class="lucide lucide-sun "><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="m4.93 4.93 1.41 1.41"></path><path d="m17.66 17.66 1.41 1.41"></path><path 
-                            d="M2 12h2"></path><path d="M20 12h2"></path><path d="m6.34 17.66-1.41 1.41"></path><path d="m19.07 4.93-1.41 1.41"></path>
-                        </svg>
-                        <svg class="dark" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-moon "><path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path></svg>
+                <div class="container d-flex">
+                    <div class="nav-left d-flex align-items-center gap-0">
+                        <div class="logo-container d-flex align-items-center">
+                            <h5 class="mb-0">MENU</h5>
+                        </div>
+                        <div class="dark-light button-size d-flex align-items-center">
+                            <svg class="light" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
+                                class="lucide lucide-sun "><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="m4.93 4.93 1.41 1.41"></path><path d="m17.66 17.66 1.41 1.41"></path><path 
+                                d="M2 12h2"></path><path d="M20 12h2"></path><path d="m6.34 17.66-1.41 1.41"></path><path d="m19.07 4.93-1.41 1.41"></path>
+                            </svg>
+                            <svg class="dark" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-moon "><path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path></svg>
+                        </div>
                     </div>
                     <div class="nav-right d-flex align-items-center">
                         <div class="language">
-                            <div class="language-item">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/dd/Flag_of_Azerbaijan.svg/800px-Flag_of_Azerbaijan.svg.png" alt="">
-                            </div>
-                            <div class="language-options">
-                                <div class="language-item">
-                                    <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Flag_of_the_United_Kingdom_%281-2%29.svg" alt="">
-                                </div>
-                                <div class="language-item">
-                                    <img src="https://cdn.britannica.com/42/3842-050-68EEE2C4/Flag-Russia.jpg" alt="">
-                                </div>
-                            </div>
+                            <select name="language" id="language" class="language-item">
+                                <option class="option" value="az">Azərbaycan</option>
+                                <option value="en">English</option>
+                                <option value="ru">Русский</option>
+                            </select>
                         </div>
                         <div class="filter" data-bs-toggle="modal" data-bs-target="#filterModal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.67 7.407h6.3M10.86 17.1H4.558"></path><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.274 17.154a2.355 2.355 0 0 0 2.363 2.346A2.355 2.355 0 0 0 20 17.154a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347M4 7.446a2.354 2.354 0 0 0 2.362 2.346 2.355 2.355 0 0 0 2.364-2.346A2.355 2.355 0 0 0 6.362 5.1 2.354 2.354 0 0 0 4 7.446" clip-rule="evenodd"></path></svg>
@@ -73,7 +72,7 @@
                                     Seçin
                                 </button>
                                 <ul class="dropdown-menu" aria-labelledby="allergyDropdown">
-                                    <li><label class="dropdown-item" for="allergy1"><input type="checkbox" id="allergy1" name="allergy1" checked value="Peanuts">Peanuts</label></li>
+                                    <li><label class="dropdown-item" for="allergy1"><input type="checkbox" id="allergy1" name="allergy1" value="Peanut">Peanut</label></li>
                                     <li><label class="dropdown-item" for="allergy2"><input type="checkbox" id="allergy2" name="allergy2" value="Sugar">Sugar</label></li>
                                     <li><label class="dropdown-item" for="allergy3"><input type="checkbox" id="allergy3" name="allergy3" value="Egg">Egg</label></li>
                                     <li><label class="dropdown-item" for="allergy4"><input type="checkbox" id="allergy4" name="allergy4" value="Coconut">Coconut</label></li>
@@ -122,6 +121,7 @@
         </main>
     </div>
 
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="./assets/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
