--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
                     <div class="nav-right d-flex align-items-center">
                         <div class="language">
                             <select name="language" id="language" class="language-item">
-                                <option class="option" value="az">Azərbaycan</option>
-                                <option value="en">English</option>
-                                <option value="ru">Русский</option>
+                                <option class="option" value="az">AZE</option>
+                                <option value="en">ENG</option>
+                                <option value="ru">RUS</option>
                             </select>
                         </div>
                         <div class="filter" data-bs-toggle="modal" data-bs-target="#filterModal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.67 7.407h6.3M10.86 17.1H4.558"></path><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.274 17.154a2.355 2.355 0 0 0 2.363 2.346A2.355 2.355 0 0 0 20 17.154a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347M4 7.446a2.354 2.354 0 0 0 2.362 2.346 2.355 2.355 0 0 0 2.364-2.346A2.355 2.355 0 0 0 6.362 5.1 2.354 2.354 0 0 0 4 7.446" clip-rule="evenodd"></path></svg>
                         </div>                      
                         <div class="search">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.583 17.5a7.917 7.917 0 1 0 0-15.833 7.917 7.917 0 0 0 0 15.833"></path><path stroke="currentColor" d="m18.333 18.333-1.666-1.666"></path></svg>
+                            <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.583 17.5a7.917 7.917 0 1 0 0-15.833 7.917 7.917 0 0 0 0 15.833"></path><path stroke="currentColor" d="m18.333 18.333-1.666-1.666"></path></svg>
                         </div>
                     </div>
                     <div class="slider-place">
@@ -71,12 +71,7 @@
                                 <button class="btn btn-secondary dropdown-toggle" type="button" id="allergyDropdown" data-bs-toggle="dropdown" aria-expanded="false">
                                     Seçin
                                 </button>
-                                <ul class="dropdown-menu" aria-labelledby="allergyDropdown">
-                                    <li><label class="dropdown-item" for="allergy1"><input type="checkbox" id="allergy1" name="allergy1" value="Peanut">Peanut</label></li>
-                                    <li><label class="dropdown-item" for="allergy2"><input type="checkbox" id="allergy2" name="allergy2" value="Sugar">Sugar</label></li>
-                                    <li><label class="dropdown-item" for="allergy3"><input type="checkbox" id="allergy3" name="allergy3" value="Egg">Egg</label></li>
-                                    <li><label class="dropdown-item" for="allergy4"><input type="checkbox" id="allergy4" name="allergy4" value="Coconut">Coconut</label></li>
-                                </ul>
+                                <ul class="dropdown-menu" aria-labelledby="allergyDropdown"></ul>
                             </div>
                         </div>
                       </div>
@@ -107,7 +102,7 @@
             <div class="see-more-back">
                 <div class="see-more-popup container">
                     <div class="see-more-image product-image">
-                        <i class="image-zoom las la-expand-arrows-alt"></i>
+                        <i class="close-seeMore lar la-times-circle"></i>
                     </div>
                     <div class="type-place">
                         <h5 class="fw-bold">Coffee type</h5>
