--- a/index.html
+++ b/index.html
@@ -41,9 +41,44 @@
                             <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.583 17.5a7.917 7.917 0 1 0 0-15.833 7.917 7.917 0 0 0 0 15.833"></path><path stroke="currentColor" d="m18.333 18.333-1.666-1.666"></path></svg>
                         </div>
                     </div>
-                    <div class="slider-place">
-                        <div class="slider"></div>
+                    
+                </div>
+                <div class="place-header"></div>
+                    <h1>Some Information</h1>
+                    <div class="contact-place ">
+                        <div class="info-place">
+                            <div class="info-place-item col-md-4">
+                                <i class="las la-map-marker"></i>
+                                <span>
+                                    <a
+                                        href="https://www.google.com/maps/search/Kontraktova+ploshcha+1,+Kyiv,+Ukraine/@50.4645777,30.5117855,16z/data=!3m1!4b1?entry=ttu">Kyiv, Ukraine</a>
+                                </span>
+                            </div>
+                            <div class="info-place-item col-md-4">
+                                <i class="las la-phone"></i>
+                                <span>
+                                    <a href="">094 123 4567</a>
+                                </span>
+                            </div>
+                            <div class="info-place-item col-md-4">
+                                <i class="las la-wifi"></i>
+                                <span>
+                                    <a href="">Wifi_Password123</a>
+                                </span>
+                            </div>
+                            <div class="about-place">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto inventore
+                                    fugiat dolor illo reiciendis ullam dignissimos debitis deserunt,
+                                    recusandae quam aspernatur provident facilis maxime. Lorem, ipsum.</p>
+                                <p>zzz Lorem ipsum dolor sit amet.</p>
+                            </div>
+                        </div>
                     </div>
+                </div>
+            </div>
+            <div class="container slider-place">
+                <div class="slider-place">
+                    <div class="slider"></div>
                 </div>
             </div>
         </header>
@@ -112,7 +147,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-cards container p-0 my-5"></div>
+            <div class="menu-cards container p-0 my-1"></div>
         </main>
     </div>
 
