--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     </div>
                     
                 </div>
-                <div class="place-header"></div>
+                <div class="place-header">
                     <h1>Some Information</h1>
                     <div class="contact-place ">
                         <div class="info-place">
@@ -76,6 +76,7 @@
                     </div>
                 </div>
             </div>
+        </div>
             <div class="container slider-place">
                 <div class="slider-place">
                     <div class="slider"></div>
