--- a/index.html
+++ b/index.html
@@ -12,38 +12,31 @@
 <body>
     <div class="container">
         <header>
-            <div id="navbar" class="navbar d-flex align-items-center justify-content-between">
-                <div class="container d-flex">
-                    <div class="nav-left d-flex align-items-center gap-0">
-                        <div class="logo-container d-flex align-items-center">
-                            <h5 class="mb-0">MENU</h5>
+            <div>
+                <div id="navbar" class="navbar d-flex align-items-center justify-content-between">
+                    <div class="container d-flex">
+                        <div class="nav-left d-flex align-items-center gap-0">
+                            <div class="logo-container d-flex align-items-center">
+                                <h5 class="mb-0">MENU</h5>
+                            </div>
                         </div>
-                        <div class="dark-light button-size d-flex align-items-center">
-                            <svg class="light" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" 
-                                class="lucide lucide-sun "><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="m4.93 4.93 1.41 1.41"></path><path d="m17.66 17.66 1.41 1.41"></path><path 
-                                d="M2 12h2"></path><path d="M20 12h2"></path><path d="m6.34 17.66-1.41 1.41"></path><path d="m19.07 4.93-1.41 1.41"></path>
-                            </svg>
-                            <svg class="dark" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-moon "><path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path></svg>
-                        </div>
-                    </div>
-                    <div class="nav-right d-flex align-items-center">
-                        <div class="language">
+                        <div class="nav-right d-flex align-items-center">
+                            <div class="language">
                             <select name="language" id="language" class="language-item">
                                 <option class="option" value="az">AZE</option>
                                 <option value="en">ENG</option>
                                 <option value="ru">RUS</option>
                             </select>
-                        </div>
-                        <div class="filter" data-bs-toggle="modal" data-bs-target="#filterModal">
+                            </div>
+                            <div class="filter" data-bs-toggle="modal" data-bs-target="#filterModal">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.67 7.407h6.3M10.86 17.1H4.558"></path><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15.274 17.154a2.355 2.355 0 0 0 2.363 2.346A2.355 2.355 0 0 0 20 17.154a2.355 2.355 0 0 0-2.363-2.347 2.355 2.355 0 0 0-2.363 2.347M4 7.446a2.354 2.354 0 0 0 2.362 2.346 2.355 2.355 0 0 0 2.364-2.346A2.355 2.355 0 0 0 6.362 5.1 2.354 2.354 0 0 0 4 7.446" clip-rule="evenodd"></path></svg>
-                        </div>                      
-                        <div class="search">
+                            </div>                      
+                            <div class="search">
                             <svg class="search-svg" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"><path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.583 17.5a7.917 7.917 0 1 0 0-15.833 7.917 7.917 0 0 0 0 15.833"></path><path stroke="currentColor" d="m18.333 18.333-1.666-1.666"></path></svg>
+                            </div>
                         </div>
                     </div>
-                    
-                </div>
-                <div class="place-header">
+                    <div class="place-header">
                     <h1>Some Information</h1>
                     <div class="contact-place ">
                         <div class="info-place">
@@ -72,13 +65,14 @@
                                     recusandae quam aspernatur provident facilis maxime. Lorem, ipsum.</p>
                                 <p>zzz Lorem ipsum dolor sit amet.</p>
                             </div>
+                            
                         </div>
+                    </div>
                     </div>
                 </div>
             </div>
-        </div>
-            <div class="container slider-place">
-                <div class="slider-place">
+            <div class="container slider-place slider-on-the-top">
+                <div class="slider-place .slider-on-the-top">
                     <div class="slider"></div>
                 </div>
             </div>
